add share lesson notes page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -69,9 +69,9 @@
 				      </a>
 					  </li>
                       <li>
-					<a class="nav-link" href="{{ url_for('site.SearchedHousePageAnnouncement') }}">
+					<a class="nav-link" href="{{ url_for('site.SharedLessonNotesAnnouncementPage') }}">
 					      <i class="fa fa-fw fa-area-chart"></i>
-					      <span class="nav-link-text">Searching Houses</span>
+					      <span class="nav-link-text">Sharing Lesson Notes</span>
 				      </a>
 					  </li>
 				  </ul>
