--- a/templates/sharedlessonnotes.html
+++ b/templates/sharedlessonnotes.html
@@ -39,5 +39,49 @@
             </div>
         </div>
     </div>
+    {% if ALLSharingLessonNotes %}
+        <table id = "SharingLessonNotesAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+            <tr>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">LESSON NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">LESSON CODE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">TEACHER NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+
+            </tr>
+            {% for item in ALLSharingLessonNotes %}
+                <tr>
+                    <td>{{ item[0] }}</td>
+                    <td>{{ item[1] }}</td>
+                    <td>{{ item[2] }}</td>
+                    <td>{{ item[3] }}</td>
+                    <td>
+                       <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+                         <div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
+                             <div class = "modal-dialog">
+                                 <div class = "modal-content">
+                                         <div class="modal-header">
+                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                             <h4 class="modal-title">Profile</h4>
+                                         </div>
+                                         <div class = "modal-body">
+                                             <label>NAME and SURNAME</label>
+                                             <p>{{ item[4] }} {{ item[5] }}</p>
+                                             <label>EMAIL</label>
+                                             <p>{{ item[6] }}</p>
+                                             <label>FACULTY</label>
+                                             <p>{{ item[7] }} - {{ item[8] }}</p>
+                                         </div>
+                                     </div>
+                                 </div>
+                             </div>
+                    </td>
+
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p>There are no items.</p>
+    {% endif %}
 
 {%endblock %}
