--- a/templates/sharedbooks_announcement.html
+++ b/templates/sharedbooks_announcement.html
@@ -32,7 +32,7 @@
                             <div class="form-radio">
                                 <label for="InputTypeOfSharedBooks">SELL OR FREE</label>
                                 <input type="radio" name="InputTypeOfSharedBooks" value="Free" checked> Free
-                                <input type="radio" name="InputTypeOfSharedBooks" value="Sell" checked> Sell <br>
+                                <input type="radio" name="InputTypeOfSharedBooks" value="Sell" > Sell <br>
                             </div>
                         </div>
                         <div class = "form-group">
@@ -46,4 +46,54 @@
             </div>
         </div>
     </div>
+        {% if ALLSharingBooks %}
+        <table id = "SharingLessonNotesAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+            <tr>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">LESSON NAME</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">LESSON CODE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">TYPES OF SHARE</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">PRICE OF BOOKS</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+
+            </tr>
+            {% for item in ALLSharingBooks %}
+                <tr>
+                    <td>{{ item[0] }}</td>
+                    <td>{{ item[1] }}</td>
+                    <td>{{ item[2] }}</td>
+                    <td>{{ item[3] }}</td>
+                    {% if item[4] != None %}
+                    <td>{{ item[4] }}</td>
+                    {% else %}
+                    <td><p>No Price</p></td>
+                    {% endif %}
+                    <td>
+                       <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+                         <div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
+                             <div class = "modal-dialog">
+                                 <div class = "modal-content">
+                                         <div class="modal-header">
+                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                             <h4 class="modal-title">Profile</h4>
+                                         </div>
+                                         <div class = "modal-body">
+                                             <label>NAME and SURNAME</label>
+                                             <p>{{ item[5] }} {{ item[6] }}</p>
+                                             <label>EMAIL</label>
+                                             <p>{{ item[7] }}</p>
+                                             <label>FACULTY</label>
+                                             <p>{{ item[8] }} - {{ item[9] }}</p>
+                                         </div>
+                                     </div>
+                                 </div>
+                             </div>
+                    </td>
+
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p>There are no items.</p>
+    {% endif %}
 {%endblock %}
