--- a/templates/special_student.html
+++ b/templates/special_student.html
@@ -40,19 +40,39 @@
         </div>
     </div>
     {% if specialstudents %}
-        <table style="width:110%">
+        <table id = "SpecialStudentsTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <tr>
-                <th>Subject</th>
-                <th>Student's Name</th>
-                <th>Student's e-mail</th>
-                <th>Student's Phone Number</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">Subject</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">Name of Student</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">Contact Info of Student</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">Person Who Posted</th>
             </tr>
-            {% for students in specialstudents %}
+            {% for item in specialstudents %}
                 <tr>
-                    <td>{{ students[0] }}</td>
-                    <td>{{ students[1] }}</td>
-                    <td>{{ students[2] }}</td>
-                    <td>{{ students[3] }}</td>
+                    <td>{{ item[0] }}</td>
+                    <td>{{ item[1] }}</td>
+                    <td>{{ item[2] }}<br>{{ item[3] }}</td>
+                    <td>
+                       <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+                         <div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
+                             <div class = "modal-dialog">
+                                 <div class = "modal-content">
+                                     <div class="modal-header">
+                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                         <h4 class="modal-title">Profile</h4>
+                                     </div>
+                                     <div class = "modal-body">
+                                         <label>NAME and SURNAME</label>
+                                         <p>{{ item[4] }} {{ item[5] }}</p>
+                                         <label>EMAIL</label>
+                                         <p>{{ item[6] }}</p>
+                                         <label>FACULTY</label>
+                                         <p>{{ item[7] }} - {{ item[8] }}</p>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
+                    </td>
                 </tr>
             {% endfor %}
         </table>
