changed style of special lessons pages in layout.html

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,19 +59,19 @@
 
               <li class="nav-item" data-toggle="tooltip" data-placement="right" title="SpecialLessons">
 				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseSpecialLessons" data-parent="#exampleAccordion">
-					  <i class="fa fa-fw fa-file"></i>
+					  <i class="fa fa-fw fa-pencil"></i>
 					  <span class="nav-link-text">Special Lessons</span>
 				  </a>
 				  <ul class="sidenav-second-level collapse" id="collapseSpecialLessons">
 					  <li>
 						  <a class="nav-link" href="{{ url_for('site.SpecialTutor') }}">
-                          <i class="fa fa-fw fa-file"></i>
+                          <i class="fa fa-fw fa-pencil"></i>
 					      <span class="nav-link-text">Tutors</span>
                           </a>
 					  </li>
 					  <li>
 						  <a class="nav-link" href="{{ url_for('site.SpecialStudent') }}">
-                          <i class="fa fa-fw fa-file"></i>
+                          <i class="fa fa-fw fa-pencil"></i>
 					      <span class="nav-link-text">Students</span>
                           </a>
 					  </li>
