Navbar is fixed
When the navbar is minimized, initialize database was looking as Game Friend.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -212,7 +212,7 @@
 					  <span class="nav-link-text">Link</span>
 				  </a>
 			  </li>-->
-			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Game Friend">
+			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Initialize Database">
 				  <a class="nav-link" href="{{ url_for('site.initialize_database') }}">
 					  <i class="fa fa-fw fa-wrench"></i>
 					   <span class="nav-link-text">Initialize Database</span>
