fixed some namings in layout.html

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -99,12 +99,12 @@
 				  </ul>
 			  </li>
 
-              <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
-				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
+              <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Restaurants">
+				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseRestaurants" data-parent="#exampleAccordion">
 					  <i class="fa fa-fw fa-spoon"></i>
 					  <span class="nav-link-text">Restaurants</span>
 				  </a>
-				  <ul class="sidenav-second-level collapse" id="collapseComponents">
+				  <ul class="sidenav-second-level collapse" id="collapseRestaurants">
 					  <li>
               <a class="nav-link" href="{{ url_for('site.RestaurantsPage') }}">
 					      <i class="fa fa-fw fa-spoon"></i>
