--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
-{% block title %} Announcements{% endblock %}
+{% block title %} Game Friend Finder {% endblock %}
 {% block content %}
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#GameAnnouncement">Game Announcement</button>
+
+	<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#GameAnnouncement">Game Announcement</button>
 
 	<div class="modal fade" id="GameAnnouncement" role="dialog">
 		<div class="modal-dialog">
@@ -60,7 +61,69 @@
 		</div>
 	</div>
 
+	{% if gameFriendAnnounces %}
+		<br> <br>
 
+
+
+		<table id="dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+			<thead>
+			<tr role="row">
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Game Name: activate to sort column ascending">Game Name</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Game Type: activate to sort column ascending">Game Type</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Date: activate to sort column ascending">Date</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Location: activate to sort column ascending">Location</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Player Number: activate to sort column ascending">Player Number</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Description: activate to sort column ascending">Description</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
+			</tr>
+			</thead>
+
+
+			<tbody>
+			{% for item in gameFriendAnnounces %}
+				<tr role="row">
+					<td>{{ item[0] }}</td>
+					<td>{{ item[1] }}</td>
+					<td>{{ item[2] }}</td>
+					<td>{{ item[3] }}</td>
+					<td>{{ item[4] }}</td>
+					<td>{{ item[5] }}</td>
+					<td>
+						<button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+						<div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
+							<div class = "modal-dialog">
+								<div class = "modal-content">
+									<div class="modal-header">
+										<button type="button" class="close" data-dismiss="modal">&times;</button>
+										<h4 class="modal-title">Profile</h4>
+									</div>
+									<div class = "modal-body">
+										<label>NAME and SURNAME</label>
+										<p>{{ item[6] }} {{ item[7] }}</p>
+										<label>EMAIL</label>
+										<p>{{ item[8] }}</p>
+										<label>FACULTY</label>
+										<p>{{ item[9] }} - {{ item[10] }}</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</td>
+				</tr>
+			{% endfor %}
+			</tbody>
+
+
+		</table>
+
+
+	{% else %}
+		<br>
+		<br>
+		<p> There is no Game Friend Announcement currently! </p>
+
+	{% endif %}
 
 
 {%endblock %}
