--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,7 @@
 
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}">
   <!-- Custom styles for this template-->
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/datatables/dataTables.bootstrap4.css') }}">
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/sb-admin.css') }}">
   <script type="text/javascript">
     //Call the method on pageload
@@ -401,6 +402,10 @@
     <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/sb-admin.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/sb-admin-datatables.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/datatables/jquery.dataTables.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/datatables/dataTables.bootstrap4.js') }}"></script>
+
 
   </div>
 
