--- a/templates/special_student.html
+++ b/templates/special_student.html
@@ -21,16 +21,16 @@
                             <input class="form-control" name="SpecialStudentSubject" placeholder="Enter Subject" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="InputDescription">Name</label>
-                            <input class="form-control" name="SpecialStudentName" placeholder="Enter Name" type="text">
+                            <label for="InputDescription">Name of Student</label>
+                            <input class="form-control" name="SpecialStudentName" placeholder="Enter Name of Student" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="InputPossibleLocation">E-mail</label>
-                            <input class="form-control" name="SpecialStudentMail" placeholder="Enter e-mail" type="text">
+                            <label for="InputPossibleLocation">E-mail of Student</label>
+                            <input class="form-control" name="SpecialStudentMail" placeholder="Enter e-mail of Student" type="text">
                           </div>
                           <div class="form-group">
                             <label for="date">Phone Number</label>
-                            <input class="form-control" name="SpecialStudentPhone" placeholder="Enter Phone" type="text"><br>
+                            <input class="form-control" name="SpecialStudentPhone" placeholder="+90(5--)-------" type="text"><br>
                           </div>
                           <button type="reset">Reset</button>
                           <button type="submit" formmethod="POST">Send</button>
@@ -40,13 +40,16 @@
         </div>
     </div>
     {% if specialstudents %}
-        <table id = "SpecialStudentsTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
-            <tr>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">Subject</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">Name of Student</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">Contact Info of Student</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">Person Who Posted</th>
+        <br><br>
+        <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+            <thead>
+            <tr role="row">
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Subject: activate to sort column ascending">Subject</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Name of Student: activate to sort column ascending">Name of Student</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Contact Info of Student: activate to sort column ascending">Contact Info of Student</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
             </tr>
+            </thead>
             {% for item in specialstudents %}
                 <tr>
                     <td>{{ item[0] }}</td>
