--- a/templates/special_tutor.html
+++ b/templates/special_tutor.html
@@ -21,16 +21,16 @@
                             <input class="form-control" name="SpecialTutorSubject" placeholder="Enter Subject" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="InputDescription">Name</label>
-                            <input class="form-control" name="SpecialTutorName" placeholder="Enter Name" type="text">
+                            <label for="InputDescription">Name of Tutor</label>
+                            <input class="form-control" name="SpecialTutorName" placeholder="Enter Name of Tutor" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="InputPossibleLocation">E-mail</label>
-                            <input class="form-control" name="SpecialTutorMail" placeholder="Enter e-mail" type="text">
+                            <label for="InputPossibleLocation">E-mail of Tutor</label>
+                            <input class="form-control" name="SpecialTutorMail" placeholder="Enter e-mail of Tutor" type="text">
                           </div>
                           <div class="form-group">
                             <label for="date">Phone Number</label>
-                            <input class="form-control" name="SpecialTutorPhone" placeholder="Enter Phone" type="text"><br>
+                            <input class="form-control" name="SpecialTutorPhone" placeholder="Enter Phone Number" type="text"><br>
                           </div>
                           <button type="reset">Reset</button>
                           <button type="submit" formmethod="POST">Send</button>
@@ -40,13 +40,16 @@
         </div>
     </div>
     {% if specialtutors %}
-        <table id = "SpecialTutorsTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
-            <tr>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Position: activate to sort column ascending">Subject</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">Name of Tutor</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Position: activate to sort column ascending">Contact Info of Tutor</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Position: activate to sort column ascending">Person Who Posted</th>
+        <br><br>
+        <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+            <thead>
+            <tr role="row">
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Subject: activate to sort column ascending">Subject</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Name of Tutor: activate to sort column ascending">Name of Tutor</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Contact Info of Tutor: activate to sort column ascending">Contact Info of Tutor</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
             </tr>
+            </thead>
             {% for item in specialtutors %}
                 <tr>
                     <td>{{ item[0] }}</td>
