--- a/templates/layout.html
+++ b/templates/layout.html
@@ -107,17 +107,19 @@
 				  </a>
 				  <ul class="sidenav-second-level collapse" id="collapseRestaurants">
 					  <li>
-              <a class="nav-link" href="{{ url_for('site.RestaurantsPage') }}">
-					      <i class="fa fa-fw fa-spoon"></i>
-					      <span class="nav-link-text">Search Restaurant</span>
-				      </a>
+                            <a class="nav-link" href="{{ url_for('site.RestaurantsPage') }}">
+					            <i class="fa fa-fw fa-spoon"></i>
+					            <span class="nav-link-text">Search Restaurant</span>
+                            </a>
 					  </li>
+                      {% if current_user.is_admin %}
 					  <li>
-              <a class="nav-link" href="{{ url_for('site.RestaurantsPage') }}">
-					      <i class="fa fa-fw fa-spoon"></i>
-					      <span class="nav-link-text">Add Restaurant</span>
-				      </a>
+                          <a class="nav-link" href="{{ url_for('site.RestaurantsPage') }}">
+					         <i class="fa fa-fw fa-spoon"></i>
+					        <span class="nav-link-text">Add Restaurant</span>
+                          </a>
 					  </li>
+                      {% endif %}
 				  </ul>
 			  </li>
 
@@ -213,12 +215,14 @@
 					  <span class="nav-link-text">Link</span>
 				  </a>
 			  </li>-->
+              {% if current_user.is_admin %}
 			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Initialize Database">
 				  <a class="nav-link" href="{{ url_for('site.initialize_database') }}">
 					  <i class="fa fa-fw fa-wrench"></i>
 					   <span class="nav-link-text">Initialize Database</span>
 				  </a>
 			  </li>
+              {% endif %}
 		  </ul>
 		  <ul class="navbar-nav sidenav-toggler">
 			  <li class="nav-item">
