--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -69,13 +69,14 @@
 		<table id="dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
 			<thead>
 			<tr role="row">
-				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Game Name: activate to sort column ascending">Game Name</th>
-				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Game Type: activate to sort column ascending">Game Type</th>
-				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Date: activate to sort column ascending">Date</th>
-				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Location: activate to sort column ascending">Location</th>
-				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Player Number: activate to sort column ascending">Player Number</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Game Name: activate to sort column ascending">Game Name</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Game Type: activate to sort column ascending">Game Type</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Date: activate to sort column ascending">Date</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Location: activate to sort column ascending">Location</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Player Number: activate to sort column ascending">Player Number</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Description: activate to sort column ascending">Description</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Full Profile: activate to sort column ascending">Full Profile of Poster</th>
 			</tr>
 			</thead>
 
@@ -89,6 +90,7 @@
 					<td>{{ item[3] }}</td>
 					<td>{{ item[4] }}</td>
 					<td>{{ item[5] }}</td>
+					<td>{{ item[6] }} {{ item[7] }}</td>
 					<td>
 						<button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
 						<div class = "modal fade" id = "profileOfOwnerAd" role ="dialog">
