--- a/templates/layout.html
+++ b/templates/layout.html
@@ -216,12 +216,18 @@
 				  </a>
 			  </li>-->
               {% if current_user.is_admin %}
-			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Initialize Database">
-				  <a class="nav-link" href="{{ url_for('site.initialize_database') }}">
-					  <i class="fa fa-fw fa-wrench"></i>
-					   <span class="nav-link-text">Initialize Database</span>
-				  </a>
-			  </li>
+                  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Initialize Database">
+                      <a class="nav-link" href="{{ url_for('site.initialize_database') }}">
+                          <i class="fa fa-fw fa-wrench"></i>
+                          <span class="nav-link-text">Initialize Database</span>
+                      </a>
+                  </li>
+                  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Add Faculty">
+                      <a class="nav-link" href="{{ url_for('site.AddFaculty') }}">
+                          <i class="fa fa-fw fa-wrench"></i>
+                          <span class="nav-link-text">Add Faculty</span>
+                      </a>
+                  </li>
               {% endif %}
 		  </ul>
 		  <ul class="navbar-nav sidenav-toggler">
