Profile page is fixed for different users

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,8 @@
     <h1>Welcome to ITUHelper!</h1>
 
 
-    <p>{{ current_user.get_name() }}</p>
+    <p>{{ user.get_username() }}</p>
+    <p>{{ user.get_email() }}</p>
 
 
 
