List Users functionality is under development part 1

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -234,6 +234,12 @@
                             <span class="nav-link-text">Add Faculty</span>
                         </a>
                     </li>
+                    <li class="nav-item" data-toggle="tooltip" data-placement="right" title="ListUsers">
+                        <a class="nav-link" href="{{ url_for('site.ListUsers') }}">
+                            <i class="fa fa-fw fa-wrench"></i>
+                            <span class="nav-link-text">List Users</span>
+                        </a>
+                    </li>
                 {% endif %}
             </ul>
             <ul class="navbar-nav sidenav-toggler">
