--- a/templates/lost_stuff.html
+++ b/templates/lost_stuff.html
@@ -79,11 +79,14 @@
                                      </div>
                                      <div class = "modal-body">
                                          <label>NAME and SURNAME</label>
-                                         <p>{{ item[6] }} {{ item[7] }}</p>
+                                         <p>{{ item[7] }} {{ item[8] }}</p>
                                          <label>EMAIL</label>
-                                         <p>{{ item[8] }}</p>
+                                         <p>{{ item[9] }}</p>
                                          <label>FACULTY</label>
-                                         <p>{{ item[9] }} - {{ item[10] }}</p>
+                                         <p>{{ item[10] }} - {{ item[11] }}</p>
+                                         <a href="{{ url_for('site.SelectedProfilePage', username=item[6]) }}">
+                                            <button type="submit"  class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Go to Profile</button>
+                                         </a>
                                      </div>
                                  </div>
                              </div>
